light mode dark mode corrected

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
-body {
-    margin: 0;
-    background: light-dark(#efedea, #223a2c);
-    text-align: center;
-}
+:root {
+    color-scheme: light dark;
+  }
+  
+  body {
+      margin: 0;
+      background: light-dark(#efedea, #223a2c);
+      text-align: center;
+      color: light-dark(#333b3c, #efefec); /* Ensure text color changes accordingly */
+  }
+  
